--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,167 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  overflow: none;
+  user-select: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ul{
+  list-style-type: none;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  position: relative;
+}
+
+li{
+  color: #000;
+  opacity: 75%;
+  font-size: 16px;
+  position: relative;
+}
+
+h2{
+  cursor: pointer;
+}
+
+li:hover{
+  cursor: pointer;
+}
+
+nav{
+  height: 60px;
+  border-bottom: 1px solid rgb(230, 225, 225);
+  position: relative;
+}
+
+button:hover{
+  scale: 0.9;
+}
+
+p{
+  opacity: 75%;
+}
+
+.disc{
+  font-size: 16px;
+  color: #000;
+  opacity: 75%;
+  background-color: #fff;
+}
+
+.multiple{
+  background-color: #fff;
+  color: #000;
+  opacity: 75%;
+}
+
+.cart{
+  position: relative;
+}
+
+.menu1{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    box-sizing: border-box;
+    border: 1px solid #fff;
+    position: fixed;
+    padding: 20px;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    box-shadow: 0px 0 15px gray;
+    backdrop-filter: blur(30px);
+}
+
+.close{
+  margin-bottom: 50px;
+}
+
+.ul1{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.cart-num{
+  position: absolute;
+  color: #fff;
+  font-weight: 700;
+  font-size: 12px;
+  top: -13px;
+  left: 7px;
+  background-color: hsl(26, 100%, 55%);
+  border-radius: 3px;
+  padding: 0 3px 0 3px;
+}
+
+.commerce-img:hover{
+  border: 2px solid hsl(26, 100%, 55%) ;
+  opacity: 75%;
+}
+
+span{
+  font-size: small;
+  color: hsl(26, 100%, 55%);
+  box-sizing: border-box;
+  background-color:  hsl(25, 100%, 94%);
+  padding: 2px;
+  border-radius: 5px;
+}
+
+.cancel-box{
+  position: relative;
+}
+
+.cancel{
+  position: absolute;
+  box-sizing: border-box;
+  border: 1px solid rgb(192, 187, 187);
+  width: 100%;
+  top: 12px;
+}
+
+.ul li:after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: hsl(26, 100%, 55%);
+  left: 0px;
+  bottom: -26px;
+  opacity: 0;
+  transform: scale(0,1);
+}
+
+.ul li:hover:after{
+  width: 100%;
+  opacity: 1;
+  transform: scale(1,1);
+  transition: all 0.2s ease-in;
+}
+
+@media(max-width: 760px){
+  nav{
+    height: 40px;
+    border-bottom: none;
+    padding: 0 30px 0 30px;
+  }
+  
+  .ul li:after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: hsl(26, 100%, 55%);
+    left: 0px;
+    bottom: -5px;
+    opacity: 0;
+    transform: scale(0,1);
+  }
+  
 }
